[gd_scene load_steps=44 format=2]

[ext_resource path="res://trivia4.gd" type="Script" id=1]
[ext_resource path="res://asset/Imagenes/fodovosque.png" type="Texture" id=2]
[ext_resource path="res://asset/Imagenes/jose.png" type="Texture" id=3]
[ext_resource path="res://Fuente/kenvector_future.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://asset/Imagenes/boton_atraso.png" type="Texture" id=5]
[ext_resource path="res://guerrero.tscn" type="PackedScene" id=6]
[ext_resource path="res://maga.tscn" type="PackedScene" id=7]
[ext_resource path="res://asset/musica/jefe4.ogg" type="AudioStream" id=8]
[ext_resource path="res://asset/musica/correcto.ogg" type="AudioStream" id=9]
[ext_resource path="res://asset/musica/incorrecto.ogg" type="AudioStream" id=10]

[sub_resource type="DynamicFont" id=1]
outline_color = Color( 0.843137, 0.109804, 0.109804, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=10]
size = 14
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=12]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=13]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=14]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=15]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=16]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=17]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=18]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=19]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=20]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=21]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=22]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=23]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=24]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=25]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=26]
size = 15
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=27]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=28]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=29]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=30]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=31]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=32]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=33]
font_data = ExtResource( 4 )

[node name="trivia4" type="Node2D"]
script = ExtResource( 1 )

[node name="fodo" type="Sprite" parent="."]
position = Vector2( 515.712, 304.861 )
scale = Vector2( 2.28045, 1.0091 )
texture = ExtResource( 2 )

[node name="jose" type="Sprite" parent="."]
position = Vector2( 140.055, 408.874 )
scale = Vector2( 0.143186, 0.194921 )
texture = ExtResource( 3 )

[node name="Button11" type="Button" parent="."]
margin_left = 503.0
margin_top = 37.0
margin_right = 1026.0
margin_bottom = 184.0
custom_fonts/font = SubResource( 1 )
text = "TERMINASTE LA TRIVIA, COTIUA CO LAS OTRAS"

[node name="Button3" type="Button" parent="."]
margin_left = 501.0
margin_top = 37.0
margin_right = 1024.0
margin_bottom = 184.0
custom_fonts/font = SubResource( 2 )
text = "¿Cuál es el peor modelo de monetización?"

[node name="Button4" type="Button" parent="."]
margin_left = 502.0
margin_top = 37.0
margin_right = 1025.0
margin_bottom = 184.0
custom_fonts/font = SubResource( 3 )
text = " ADVA es…"

[node name="Button5" type="Button" parent="."]
margin_left = 503.0
margin_top = 37.0
margin_right = 1025.0
margin_bottom = 184.0
custom_fonts/font = SubResource( 4 )
text = "Un GDD es…"

[node name="Button6" type="Button" parent="."]
margin_left = 506.0
margin_top = 37.0
margin_right = 1025.0
margin_bottom = 184.0
custom_fonts/font = SubResource( 5 )
text = "Un high concept sirve para"

[node name="Button7" type="Button" parent="."]
margin_left = 502.0
margin_top = 37.0
margin_right = 1025.0
margin_bottom = 184.0
custom_fonts/font = SubResource( 6 )
text = "La estructura MDA corresponde a…"

[node name="Button8" type="Button" parent="."]
margin_left = 505.0
margin_top = 37.0
margin_right = 1025.0
margin_bottom = 184.0
custom_fonts/font = SubResource( 7 )
text = " ¿Quién es Toru Iwatani?"

[node name="Button9" type="Button" parent="."]
margin_left = 503.0
margin_top = 36.0
margin_right = 1028.0
margin_bottom = 183.0
custom_fonts/font = SubResource( 8 )
text = "¿Cuál fue el primer éxito de Nintendo?"

[node name="Button10" type="Button" parent="."]
margin_left = 503.0
margin_top = 37.0
margin_right = 1025.0
margin_bottom = 184.0
custom_fonts/font = SubResource( 1 )
text = "¿A qué se considera una mecánica?"

[node name="Button13" type="Button" parent="."]
margin_left = 508.0
margin_top = 241.0
margin_right = 1025.0
margin_bottom = 301.0
custom_fonts/font = SubResource( 9 )
text = " Free con publicidades in game"

[node name="Button14" type="Button" parent="."]
margin_left = 509.0
margin_top = 242.0
margin_right = 1026.0
margin_bottom = 302.0
custom_fonts/font = SubResource( 10 )
text = "Asociación de Desarrolladores de VJ de Argentina"

[node name="Button15" type="Button" parent="."]
margin_left = 505.0
margin_top = 241.0
margin_right = 1025.0
margin_bottom = 301.0
custom_fonts/font = SubResource( 11 )
text = " Un documento de programación"

[node name="Button16" type="Button" parent="."]
margin_left = 505.0
margin_top = 241.0
margin_right = 1025.0
margin_bottom = 301.0
custom_fonts/font = SubResource( 12 )
text = "Definir el concepto del juego"

[node name="Button17" type="Button" parent="."]
margin_left = 506.0
margin_top = 241.0
margin_right = 1025.0
margin_bottom = 301.0
custom_fonts/font = SubResource( 13 )
text = "Mecánicas, dinámicas y automatización"

[node name="Button18" type="Button" parent="."]
margin_left = 505.0
margin_top = 241.0
margin_right = 1025.0
margin_bottom = 301.0
custom_fonts/font = SubResource( 14 )
text = "Creador de Pacman"

[node name="Button19" type="Button" parent="."]
margin_left = 507.0
margin_top = 241.0
margin_right = 1025.0
margin_bottom = 301.0
custom_fonts/font = SubResource( 15 )
text = "Super Mario Bros"

[node name="Button20" type="Button" parent="."]
margin_left = 506.0
margin_top = 241.0
margin_right = 1025.0
margin_bottom = 301.0
custom_fonts/font = SubResource( 16 )
text = " Reglas de juego"

[node name="Button23" type="Button" parent="."]
margin_left = 513.0
margin_top = 365.0
margin_right = 1022.0
margin_bottom = 425.0
custom_fonts/font = SubResource( 17 )
text = "Microtransacciones / Lootboxes"

[node name="Button24" type="Button" parent="."]
margin_left = 510.166
margin_top = 365.0
margin_right = 1022.17
margin_bottom = 425.0
custom_fonts/font = SubResource( 18 )
text = "Asociación de Desarrolladores Audiovisuales"

[node name="Button25" type="Button" parent="."]
margin_left = 514.0
margin_top = 365.0
margin_right = 1022.0
margin_bottom = 425.0
custom_fonts/font = SubResource( 19 )
text = "Un documento de diseño de juego"

[node name="Button26" type="Button" parent="."]
margin_left = 514.0
margin_top = 365.0
margin_right = 1022.0
margin_bottom = 425.0
custom_fonts/font = SubResource( 20 )
text = "Vender el juego"

[node name="Button27" type="Button" parent="."]
margin_left = 512.0
margin_top = 365.0
margin_right = 1022.0
margin_bottom = 425.0
custom_fonts/font = SubResource( 21 )
text = "Mecánicas, dinámicas y audio"

[node name="Button28" type="Button" parent="."]
margin_left = 511.0
margin_top = 365.0
margin_right = 1022.0
margin_bottom = 425.0
custom_fonts/font = SubResource( 22 )
text = "Creador de Super Mario Bros"

[node name="Button29" type="Button" parent="."]
margin_left = 513.0
margin_top = 365.0
margin_right = 1022.0
margin_bottom = 425.0
custom_fonts/font = SubResource( 23 )
text = "Donkey Kong"

[node name="Button30" type="Button" parent="."]
margin_left = 512.0
margin_top = 365.0
margin_right = 1022.0
margin_bottom = 425.0
custom_fonts/font = SubResource( 24 )
text = "Música de juego"

[node name="Button33" type="Button" parent="."]
margin_left = 514.0
margin_top = 483.0
margin_right = 1024.0
margin_bottom = 543.0
custom_fonts/font = SubResource( 25 )
text = "Piratería"

[node name="Button34" type="Button" parent="."]
margin_left = 513.0
margin_top = 484.0
margin_right = 1027.0
margin_bottom = 544.0
custom_fonts/font = SubResource( 26 )
text = "Asociación de Creación de Estudios de Argentina"

[node name="Button35" type="Button" parent="."]
margin_left = 512.0
margin_top = 483.0
margin_right = 1023.0
margin_bottom = 543.0
custom_fonts/font = SubResource( 27 )
text = "Un documento de la Game Developers"

[node name="Button36" type="Button" parent="."]
margin_left = 512.0
margin_top = 483.0
margin_right = 1024.0
margin_bottom = 543.0
custom_fonts/font = SubResource( 28 )
text = "Programar el juego"

[node name="Button37" type="Button" parent="."]
margin_left = 513.0
margin_top = 483.0
margin_right = 1024.0
margin_bottom = 543.0
custom_fonts/font = SubResource( 29 )
text = " Mecánicas, dinámicas y estéticas"

[node name="Button38" type="Button" parent="."]
margin_left = 512.0
margin_top = 483.0
margin_right = 1024.0
margin_bottom = 543.0
custom_fonts/font = SubResource( 30 )
text = "Creador de Metal Gear"

[node name="Button39" type="Button" parent="."]
margin_left = 514.0
margin_top = 483.0
margin_right = 1024.0
margin_bottom = 543.0
custom_fonts/font = SubResource( 31 )
text = "Pokémon"

[node name="Button40" type="Button" parent="."]
margin_left = 514.0
margin_top = 483.0
margin_right = 1024.0
margin_bottom = 543.0
custom_fonts/font = SubResource( 32 )
text = "Mujer que repara autos"

[node name="atras" type="Button" parent="."]
margin_left = 5.27426
margin_top = 504.571
margin_right = 861.274
margin_bottom = 1465.57
rect_scale = Vector2( 0.1, 0.1 )
icon = ExtResource( 5 )

[node name="Node2D" parent="." instance=ExtResource( 6 )]
position = Vector2( 371.703, 462.377 )

[node name="Node2D2" parent="." instance=ExtResource( 7 )]
position = Vector2( 383.287, 462.121 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )
volume_db = -21.204
autoplay = true

[node name="Label" type="Label" parent="."]
margin_left = 228.543
margin_top = 21.766
margin_right = 333.543
margin_bottom = 76.766
custom_fonts/font = SubResource( 33 )

[node name="correcta" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="imcorrecta" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="Timer" type="Timer" parent="."]
[connection signal="pressed" from="Button13" to="." method="_on_Button13_pressed"]
[connection signal="pressed" from="Button14" to="." method="_on_Button14_pressed"]
[connection signal="pressed" from="Button15" to="." method="_on_Button15_pressed"]
[connection signal="pressed" from="Button16" to="." method="_on_Button16_pressed"]
[connection signal="pressed" from="Button17" to="." method="_on_Button17_pressed"]
[connection signal="pressed" from="Button18" to="." method="_on_Button18_pressed"]
[connection signal="pressed" from="Button19" to="." method="_on_Button19_pressed"]
[connection signal="pressed" from="Button20" to="." method="_on_Button20_pressed"]
[connection signal="pressed" from="Button23" to="." method="_on_Button23_pressed"]
[connection signal="pressed" from="Button24" to="." method="_on_Button24_pressed"]
[connection signal="pressed" from="Button25" to="." method="_on_Button25_pressed"]
[connection signal="pressed" from="Button26" to="." method="_on_Button26_pressed"]
[connection signal="pressed" from="Button27" to="." method="_on_Button27_pressed"]
[connection signal="pressed" from="Button28" to="." method="_on_Button28_pressed"]
[connection signal="pressed" from="Button29" to="." method="_on_Button29_pressed"]
[connection signal="pressed" from="Button30" to="." method="_on_Button30_pressed"]
[connection signal="pressed" from="Button33" to="." method="_on_Button33_pressed"]
[connection signal="pressed" from="Button34" to="." method="_on_Button34_pressed"]
[connection signal="pressed" from="Button35" to="." method="_on_Button35_pressed"]
[connection signal="pressed" from="Button36" to="." method="_on_Button36_pressed"]
[connection signal="pressed" from="Button37" to="." method="_on_Button37_pressed"]
[connection signal="pressed" from="Button38" to="." method="_on_Button38_pressed"]
[connection signal="pressed" from="Button39" to="." method="_on_Button39_pressed"]
[connection signal="pressed" from="Button40" to="." method="_on_Button40_pressed"]
[connection signal="pressed" from="atras" to="." method="_on_atras_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
